<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.zhang.workbench.ui.paint.PaintView
        android:id="@+id/paintView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorButton"
        style="@style/ButtonStyleClassic"
        android:text="@string/tool_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/clearButton"
        style="@style/ButtonStyleClassic"
        android:text="@string/tool_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/colorButton" />

    <TextView
        android:id="@+id/captureButton"
        style="@style/ButtonStyleClassic"
        android:text="@string/tool_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearButton" />

    <TextView
        android:id="@+id/undoButton"
        style="@style/ButtonStyleClassic"
        android:enabled="false"
        android:text="@string/tool_undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/redoButton"
        style="@style/ButtonStyleClassic"
        android:enabled="false"
        android:text="@string/tool_redo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undoButton" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal">

            <RadioButton
                android:id="@+id/lineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:button="@null"
                android:checked="true"
                android:padding="12dp"
                android:text="@string/tool_line" />

            <RadioButton
                android:id="@+id/rectangleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:button="@null"
                android:padding="12dp"
                android:text="@string/tool_rectangle" />

            <RadioButton
                android:id="@+id/ovalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:button="@null"
                android:padding="12dp"
                android:text="@string/tool_oval" />

        </RadioGroup>

    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>