<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.zhang.workbench.design.animation.AnimateActivity">

    <Button
        android:id="@+id/animCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="animCode"
        android:text="@string/from_code" />

    <Button
        android:id="@+id/animXmlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_xml" />

    <Button
        android:id="@+id/animPropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="animProp"
        android:text="@string/from_prop"
        android:textColor="@color/black" />

    <me.zhang.workbench.design.image.widget.ThreeTwoImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="slide"
        android:src="@drawable/natural" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

</LinearLayout>
