<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.zhang.workbench.basic.BasicUiActivity">

    <ImageView
        android:id="@+id/birthday_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/birthday_image"
        android:scaleType="centerCrop"
        android:src="@drawable/androidparty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/happy_birthday_zhang"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:fontFamily="casual"
        android:padding="@dimen/activity_vertical_padding"
        android:text="@string/from_li"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>
