<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.zhang.workbench.design.font.FontActivity">

    <LinearLayout
        android:id="@+id/activity_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-light" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-thin" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-medium" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-smallcaps" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif"
            android:textStyle="italic" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-thin"
            android:textStyle="italic" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-medium"
            android:textStyle="italic" />

        <TextView
            style="@style/Font"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display4"
                android:textColor="@color/label" />

            <TextView
                android:id="@+id/display4"
                style="@android:style/TextAppearance.Material.Display4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display3"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Display3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display2"
                android:textColor="@color/label" />

            <TextView
                android:id="@+id/display2"
                style="@android:style/TextAppearance.Material.Display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display1"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headline"
                android:textColor="@color/label" />

            <TextView
                android:id="@+id/headline"
                style="@android:style/TextAppearance.Material.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subhead"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body2"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body1"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textColor="@color/label" />

            <TextView
                style="@android:style/TextAppearance.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

